# dj-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md
src/: app.rs  main.rs  ui.rs
